--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "yarn parcel src/index.html  --port 6161 --https"
   },
   "dependencies": {
+    "@polybase/client": "^0.6.6",
     "@xmtp/xmtp-js": "^12.1.0",
     "ethers": "^6.13.2",
     "parcel": "^2.12.0",
