--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@polybase/client": "^0.6.6",
     "@xmtp/xmtp-js": "^12.1.0",
+    "eth-crypto": "^2.6.0",
     "ethers": "^6.13.2",
     "parcel": "^2.12.0",
     "parcel-reporter-static-files-copy": "^1.5.3"
@@ -20,7 +21,12 @@
     "staticPath": "src/static"
   },
   "devDependencies": {
-    "buffer": "^5.5.0||^6.0.0"
+    "assert": "^2.0.0",
+    "buffer": "^5.5.0||^6.0.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "type": "module",
   "@parcel/resolver-default": {
