--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "start": "yarn parcel src/index.html  --port 6161 --https"
   },
   "dependencies": {
+    "@github/mini-throttle": "^2.1.1",
     "@noble/secp256k1": "^2.1.0",
     "@polybase/client": "^0.6.6",
     "@xmtp/message-kit": "^0.0.12",
     "@xmtp/xmtp-js": "^12.1.0",
+    "cropperjs": "^1.6.2",
     "eth-crypto": "^2.6.0",
     "ethers": "^6.13.2",
+    "mini-throttle": "^0.0.4",
     "parcel": "^2.12.0",
-    "parcel-reporter-static-files-copy": "^1.5.3"
+    "parcel-reporter-static-files-copy": "^1.5.3",
+    "qr-scanner": "^1.4.2"
   },
   "staticFiles": {
     "staticPath": "src/static"
